--- a/package.json
+++ b/package.json
@@ -5,24 +5,21 @@
   "main": "index.html",
   "scripts": {
     "start": "echo 'You probably want to $ npm run dev'",
-    "dev": "node metalsmith & npm run webpack & php -S localhost:5000 -t public",
     "webpack": "webpack --watch --hot",
-    "metalsmith": "node metalsmith"
+    "metalsmith": "node metalsmith",
+    "dev": "npm run metalsmith & npm run webpack & php -S localhost:5000 -t public"
   },
   "engines": {
     "node": "6.2.1",
     "npm": "3.9.3"
   },
   "dependencies": {
-    "postcss-loader": "^2.0.5",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
-    "watchify": "^3.9.0",
-    "webpack": "^2.6.1",
-    "webpack-hot-middleware": "^2.18.0",
+    "handlebars": "^4.0.5",
+    "handlebars-layouts": "^3.1.3",
+    "kss": "^3.0.0-beta.18",
+    "kss-loader": "^0.4.1",
     "metalsmith": "^1.0.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-define": "^2.0.1",
@@ -32,8 +29,13 @@
     "metalsmith-permalinks": "^0.1.1",
     "metalsmith-serve": "0.0.7",
     "metalsmith-watch": "^1.0.1",
-    "handlebars": "^4.0.5",
-    "handlebars-layouts": "^3.1.3"
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.5",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "watchify": "^3.9.0",
+    "webpack": "^2.6.1",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
